2004-02-06  JP Rosevear <jpr@ximian.com>

	* importers/GNOME_Evolution_Addressbook_LDIF_Importer.server.in.in:
	shlib importer info

	* importers/GNOME_Evolution_Addressbook_VCard_Importer.server.in.in: 
	ditto
	
	* importers/Makefile.am: build shlib addressbook importers

	* importers/evolution-ldif-importer.c: First crack at resurrecting

	* importers/evolution-vcard-importer.c: ditto
	
2004-02-03  Chris Toshok  <toshok@ximian.com>

	* gui/widgets/eab-contact-display.c (on_url_requested): remove
	some spew, and add an evo-icon: handler, for things in evolution's
	imagedir.
	(render_address): hack up the html.
	(render_name_value): new function, just render a name/value/icon.
	(render_attribute): split out most of this function into
	render_name_value.  this just checks to see if the EContact
	attribute has something in it before passing it along.
	(render_contact_list): split this out from
	eab_contact_display_render_normal.
	(start_block): new function, insert a row of height 20 with a
	header.
	(end_block): new function, insert a row of height 20.
	(render_contact): split this out from
	eab_contact_display_render_normal, and prettify the contact
	display.
	(eab_contact_display_render_normal): call render_contact and
	render_contact_list.
	(eab_contact_display_new): create a scrolled window and add the
	GtkHTML to it so we actually have scrollbars.

2004-02-03  Dan Winship  <danw@ximian.com>

	* gui/component/select-names/Makefile.am (INCLUDES): add
	widgets/misc for e-activity-handler.h

2004-02-03 Sivaiah Nallagatla <snallagatla@novell.com>

        * gui/component/addressbook-config.c (dialog_to_source)
        (source_to_dialog) : use gtk_spin_button_* apis to get and set
        values for download limit spin button instead of gtk_entry
        Fixes #53432

2004-02-02  Chris Toshok  <toshok@ximian.com>

	* gui/widgets/e-addressbook-view.c (eab_view_new): hook up
	contact_changed/contact_removed signals.